--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "next": "15.0.3",
+    "@headlessui/react": "^2.1.6",
+    "@heroicons/react": "^2.1.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6"
   },
   "devDependencies": {
     "typescript": "^5",
